@@ -1,55 +1,0 @@
-<?php
-/* $Id$
- *
- * This is the default stats footer
- *It's companion is stats.header.default.
- *
- * To override this footer, create a file called stats.footer in this directory.
- *
- *
- * Tips:
- * Some application variables:
- * 	- Gallery Title: $app->galleryTitle
- * Gallery developers would appreciate you promoting the Gallery code a little.
- * Use the following code snippet to display the current Gallery version linked
- * to the Gallery home page.
- */
-
-includeTemplate('stats.footer.tpl');
-?>
-	<table width="100%" cellspacing="0" cellpadding="0" class="modfooter">
-	<tr>
-		<td valign="top">
-		<!-- The Gallery code version number, linked to the Gallery home page -->
-		<span class="fineprint"><?php print poweredBy() ?> </span>
-<?php
-
-	global $GALLERY_EMBEDDED_INSIDE;
-       	if (! isset($GALLERY_EMBEDDED_INSIDE)) {
-	       	print gallery_validation_link('', true);
-       	} ?>
-		</td>
-
-<?php if ($gallery->user->isAdmin()) { ?>
-		<!-- donation block -->
-		<td width="300" align="right">
-		<span class="fineprint">
-		Are you happy with Gallery?
-		Make us happy too!  Donate!<br>
-		</span>
-		</td>
-		<td width="90" align="right">
-		<a href="<?php echo $gallery->url ?>/donate.php?donate_tag=v<?php echo $gallery->version ?>">
-			<img align="right" src="<?php echo getImagePath('donate.png') ?>" width="80" height="15" border="0" ALT="<?php echo _("Donate to Gallery now!!") ?>">
-		</a>
-		</td>
-		<?php } ?>
-	</tr>
-	</table>
-</td>
-</tr>
-</table>
-
-<?php
-includeHtmlWrap("wrapper.footer");
-?>
