@@ -2,7 +2,6 @@
 /* $Id$
  *
  * This is the default stats header (for the stats results page: stats.php).
- *It's companion is stats.footer.default.
  *
  * To override this header, create a file called stats.header in this directory.
  *
@@ -10,6 +9,7 @@
  */
 
 includeHtmlWrap("wrapper.header");
+
 global $stats_title;
 
 if (!includeTemplate("stats.header.tpl")) {
@@ -25,7 +25,7 @@ if (!includeTemplate("stats.header.tpl")) {
             <table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
               <tr>
                 <td class="mod_toplight_left" align="right"></td>
-                <td class="head" align="left"><?php echo gTranslate('core', "Gallery statistics") . $stats_title; ?></td>
+                <td class="head" align="left"><?php echo _("Gallery statistics") . $stats_title; ?></td>
                 <td class="mod_toplight_right" align="left"></td>
               </tr>
             </table>
