@@ -1,3 +1,9 @@
+2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b3
+ 
+ * Change: Remove special stats.footer use general.footer
+
+ * Fix: Make form action in stats-wizard again stats.php
+
 2008-08-18 Jens Tkotz <jens@peino.de> 1.5.9-svn-b2
 
  * Fix: Stats-Wizard did not work (EVER!) in IE6.
